--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://Skyclops.pictures/"
+baseURL = "https://www.skyclops.pictures/"
 languageCode = "en-us"
 title = "Skyclops Pictures - Premiere Aerial Video"
 theme = "hugo-creative-theme"
