Clean up sitemap and extra files
Removed taximonies from Hugo config file and removed unnecessary files

--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@ baseURL = "https://www.skyclops.pictures/"
 languageCode = "en-us"
 title = "Skyclops Pictures - Premiere Aerial Video"
 theme = "hugo-creative-theme"
-googleAnalytics = ""
+disableKinds = ["taxonomy","taxonomyTerm", "RSS"]
 
 [params]
 
