--- a/data/projects/project05.yaml
+++ b/data/projects/project05.yaml
@@ -5,4 +5,4 @@ img: 4.jpg
 client: Skyclops Pictures
 clientLink: "#"
 category: Real Estate
-description: Just a beautiful picture of the Southern California skyline
+description: Just a beautiful picture of the Southern California skyline. You are free to use this image as a desktop background, courtesy of Skyclops Pictures. [`View and download a larger version here`](img/portfolio/Skyclops-SouthernCA.jpg)
