--- a/data/projects/project01.yaml
+++ b/data/projects/project01.yaml
@@ -5,4 +5,4 @@ img: 1.jpg
 client: Homeowner
 clientLink: "#"
 category: Real Estate
-description: Skyclops Pictures assisted this client track progress of digging a drainage ditch over time. This birds-eye photograph was enhanced in Photoshop for an oblique perspective and accurate color.
+description: Skyclops Pictures assisted this client to track the progress of digging a drainage ditch over time. This birds-eye photograph was enhanced in Photoshop for an oblique perspective and accurate color.
