--- a/data/projects/project03.yaml
+++ b/data/projects/project03.yaml
@@ -5,4 +5,4 @@ img: 3.jpg
 client: Green Fields Real Estate
 clientLink: "#"
 category: Real Estate
-description: A client project to sell a magnificent property. This was one of the first client projects after completing construction of the custom Skyclops drone. This aerial perspective was instrumental in conveying the size of the property and completing the sale.
+description: A client project to sell a magnificent property. This was one of my first client projects after completing construction of the custom Skyclops drone. This aerial perspective was instrumental in conveying the size of the property and completing the sale.
