--- a/data/projects/project06.yaml
+++ b/data/projects/project06.yaml
@@ -5,4 +5,4 @@ img: 6.jpg
 client: Brandon Kalinowski
 clientLink: "#"
 category: YouTube
-description: YouTube style review of technology with an eye for drone automation. In this case, I review a $100 tablet and how it could be useful to producing remote video.
+description: YouTube style review of technology with an eye for drone automation. In this case, I review a $100 tablet and how it could be useful for producing remote video.
