--- a/data/projects/project04.yaml
+++ b/data/projects/project04.yaml
@@ -5,4 +5,4 @@ img: 5.jpg
 client: Skyclops Pictures
 clientLink: "https://www.skyclops.pictures"
 category: 3D Animation
-description: This is just a still frame from the Skyclops Pictures title card animation. The helicopter flies into view to reveal the black letters "Skyclops Pictures"
+description: This is a still frame from the Skyclops Pictures title card animation. The helicopter flies into view to reveal the black letters "Skyclops Pictures."
